[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/scatter/src/tools/modifier_stack_inspector_plugin/ui/modifiers_popup.gd" type="Script" id=1]

[node name="ModifiersPopup" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.5
margin_top = -69.0
margin_right = 243.5
margin_bottom = 69.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 124.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 144.0
margin_bottom = 118.0
size_flags_horizontal = 3

[node name="Distribute" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 144.0
margin_bottom = 14.0
text = "Distribute"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 22.0

[node name="InsideRandom" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 144.0
margin_bottom = 46.0
text = "Inside (Random)"
align = 0

[node name="InsideGrid" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 144.0
margin_bottom = 70.0
text = "Inside (Grid)"
align = 0

[node name="AlongRandom" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 144.0
margin_bottom = 94.0
text = "Along Path (Random)"
align = 0

[node name="AlongEven" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 144.0
margin_bottom = 118.0
text = "Along Path (Even)"
align = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 325.0
margin_bottom = 118.0
size_flags_horizontal = 3

[node name="Edit" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 169.0
margin_bottom = 14.0
text = "Edit"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 169.0
margin_bottom = 22.0

[node name="RandomizeAll" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 169.0
margin_bottom = 46.0
text = "Randomize All"
align = 0

[node name="ScaleNoise" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 50.0
margin_right = 169.0
margin_bottom = 70.0
text = "Randomize Scale (Noise)"
align = 0

[node name="Project" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 74.0
margin_right = 169.0
margin_bottom = 94.0
text = "Project On Floor"
align = 0

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 337.0
margin_right = 467.0
margin_bottom = 118.0
size_flags_horizontal = 3

[node name="Remove" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 130.0
margin_bottom = 14.0
text = "Remove"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 22.0

[node name="ExcludeFromPath" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 26.0
margin_right = 130.0
margin_bottom = 46.0
text = "Exclude From Path"
align = 0

[node name="ExcludeAlongPath" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 26.0
margin_right = 130.0
margin_bottom = 46.0
text = "Exclude Along Path"
align = 0

[node name="ExcludeAroundPoint" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 26.0
margin_right = 130.0
margin_bottom = 46.0
text = "Exclude Around Point"
align = 0
